# Projects

./: CLAUDE.md  PRD_USB3_Vision_Camera_App.md  README.md
Codecademy/: READ ME  README.md
Codecademy/Python/: README.md
Codecademy/Python/Kiva_Nonprofit_Analysis/: README.md  kiva_project.ipynb
Codecademy/Python/LIfe_Expectancy_and_GDP/: README.md  life_expectancy_gdp.ipynb
Codecademy/Python/Roller_Coaster_Analysis/: rollercoatser_project.ipynb
Codecademy/Python/Twitter_Classification/: README.md  tweet_location.ipynb  viral_tweets.ipynb
Python/: README.md  knapsack_problem.py
Python/HTML_Document_Reader/: README.md  html_data_getter.py  html_doc_reader.py
Python/Intro to CS & Programming Using Python/Problem Set 1/: Problem Set 1.py
Python/Inventory_Manager/: app.py
Python/Inventory_Manager/templates/: add_assembly_to_inventory.html  bom_result.html  create_bom.html  create_item.html  in_stock.html  index.html  load_bom_from_excel.html  view_bom.html
Python/Kiva_Nonprofit_Analysis/: README.md  kiva_project.ipynb
Python/LIfe_Expectancy_and_GDP/: README.md  life_expectancy_gdp.ipynb
Python/Machine_Learning/Chapter_2_Housing/: Chapter_2_Project-Housing.ipynb
Python/Machine_Learning/Chapter_2_Housing/.ipynb_checkpoints/: Chapter_2_Project-Housing-checkpoint.ipynb
Python/Quiver Plots/: Cosine Error - Least Squares Circle.ipynb  Gauge Measurment Data-06012022.xlsx  Gauge Measurment Data.xlsx  Quiver Plot - 1000689 Measurements.html  README.md  Untitled.ipynb  direction3d.ipynb  error_data.xlsx  error_data_2.xlsx  loc3d.ipynb  meas_data_1.txt  meas_data_1.xlsx  meas_data_2.xlsx  meas_data_3.xlsx  meas_data_3_calcs.xlsx  perfect_data.xlsx
Python/Roller_Coaster_Analysis/: roller_coasters.csv  rollercoatser_project.ipynb  script.py
Python/Star Classifier/: star_classifier.ipynb
Python/Tennis_Ace_ML/: tennis_ace_ML.py
Python/Twitter_Classification/: tweet_location.ipynb  viral_tweets.ipynb
Python/Web_Scraping/: Web_Scraping_Python_Practice.py
R/: README.md
R/Google Data Analytics Capstone/: Cyclistic Case Study.Rmd  Cyclistic-Case-Study.html  README.md
Side_Projects/Pokemon_Analysis/: Pokemon_Analysis_Project.ipynb
Web Development/: index.html
Web Development/Dasmoto Project/: index.html
Web Development/Dasmoto Project/resources/css/: index.css
Web Development/DevProject/: index.html
Web Development/DevProject/resources/css/: index.css
Web Development/Simple Site/: index.html
Web Development/invoiceapi/: CLAUDE.md
Web Development/invoiceapi/app/: main.py
Web Development/invoiceapi/app/extractors/: invoice_extractor_v2.py  linearizer.py
Web Development/lenslab/: .gitignore  CLAUDE.md  MTF_ANALYZER_DEVELOPMENT_REPORT.md  compile_mtf_wasm.sh  coordinate_system_fix_report.md  debug_hybrid.html  factorial.c  hybrid_mtf_analyzer.html  improvement_results_report.md  mtf_analyzer.js  mtf_analyzer.wasm  mtf_analyzer_production  real_mtf_wasm_test.html  test_synthetic_fwhm  validation_report.md  wasm_only_test.html  webcam_mtf_validator.html  webcam_mtf_validator_client.html
Web Development/lenslab/archive/: quick_mtf_validation.sh  test_accuracy.sh  validate_blur.py  validate_mtf_theory.py
Web Development/lenslab/archive/old_builds/: mtf_analyzer_6_consistent_rois  mtf_analyzer_6_coordinate_fix  mtf_analyzer_6_debug  mtf_analyzer_6_debug_quality  mtf_analyzer_6_filtered  mtf_analyzer_6_fixed  mtf_analyzer_6_fixed_quality  mtf_analyzer_6_hybrid  mtf_analyzer_6_hybrid_fixed  mtf_analyzer_6_improved  mtf_analyzer_6_outlier_filtered  mtf_analyzer_6_polarity_fixed  mtf_analyzer_6_quality  mtf_analyzer_6_roi_debug  mtf_analyzer_6_roi_fixed  mtf_analyzer_6_strict_filter  mtf_analyzer_6_sub_pixel  mtf_analyzer_6_super_res  mtf_analyzer_6_unified_sampling
Web Development/lenslab/scripts/: analyze_edge_patterns.py  analyze_fwhm_accuracy.py  analyze_real_fwhm.py  analyze_roi_consistency.py  analyze_roi_patterns.py  analyze_working_targets.py  comprehensive_fwhm_test.py  comprehensive_validation.py  count_successful_rois.py  debug_quality_metrics.py  final_roi_improvement_test.py  final_validation_test.py  generate_angle_test_targets.py  generate_clean_slant_edges.py  generate_proper_circular_targets.py  generate_radial_targets.py  generate_test_targets.py  generate_working_targets.py  plot_mtf.plt  quick_accuracy_test.py  quick_image_check.py  test_consistent_rois.py  test_final_filtering.py  test_hybrid_improvements.py  test_outlier_filtering.py  test_polarity_fix.py  test_quality_filtering.py  test_sub_pixel_fix.py  test_synthetic_fwhm.cpp  validate_fwhm_fix.py
Web Development/lenslab/src/cpp/: edge_detector  edge_detector.cpp  edge_detector_test.py  image_analysis.cpp  mtf_analyzer  mtf_analyzer.cpp  mtf_analyzer_2  mtf_analyzer_2.cpp  mtf_analyzer_3  mtf_analyzer_3.cpp  mtf_analyzer_4  mtf_analyzer_4.cpp  mtf_analyzer_5  mtf_analyzer_5.cpp  mtf_analyzer_6  mtf_analyzer_6.cpp  mtf_analyzer_wasm.cpp  mtf_cursor.cpp  pixel_lab.cpp  pixel_lab_MTF.cpp  pixel_lab_brenner.cpp  simple_edge_detector  simple_edge_detector.cpp  test  test.cpp  test_fwhm_validation.cpp
Web Development/lenslab/src/python/: MTF_Test.py  gaussian_blurer.py  image_rotation.py  improved_target_generation.py  mtf_pattern_generator.py  rotate_and_blur.py  simple_websocket_server.py  unified_mtf_tool.py  websocket_server.py  websocket_server_old.py
Web Development/lenslab/src/web/: a.out.js  a.out.wasm  (+16 more)
lenslab-desktop/: CLAUDE.md  CMakeLists.txt  README.md
lenslab-desktop/src/: main.cpp
lenslab-desktop/src/analysis/: FocusMetrics.cpp  FocusMetrics.h  MTFAnalyzer.cpp  MTFAnalyzer.h  ROIManager.cpp  ROIManager.h
lenslab-desktop/src/app/: Application.cpp  Application.h  Config.cpp  Config.h  Logger.cpp  Logger.h
lenslab-desktop/src/camera/: CameraDevice.cpp  CameraDevice.h  CameraManager.cpp  CameraManager.h  FrameBuffer.cpp  FrameBuffer.h
lenslab-desktop/src/ui/: AnalysisPanel.cpp  AnalysisPanel.h  CameraPanel.cpp  CameraPanel.h  PreviewPanel.cpp  PreviewPanel.h  UIManager.cpp  UIManager.h
lenslab-desktop/test/: test_focus_metrics.cpp  test_mtf_analyzer.cpp
